--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
     <!-- VUE CONTAINER -->
     <div id="app">
 
-        <div>
-            <div class="wrapper d-flex justify-content-center">
+        <!-- CONTAINER -->
+        <div class="content_container d-flex justify-content-center align-items-center m-auto">
+
+            <!-- WRAPPER -->
+            <div class="wrapper row d-flex rounded-3">
 
                 <!-- CONTACTS-->
-                <div class="bordered col-4">
+                <div class="bordered col-4 p-0">
+
                     <!-- SELF -->
-                    <div class="pfp-area bordered py-2 px-3 d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
+                    <div class="profile_container bordered d-flex justify-content-between align-items-center">
+
+                        <div class="bordered d-flex align-items-center">
                             <div>
-                                <img class="pfp" src="./img/avatar_io.jpg" alt="">
+                                <img class="img_layout" src="./img/avatar_io.jpg">
                             </div>
 
                             <div>
@@ -36,43 +41,40 @@
                             </div>                           
                         </div>
 
-                        <div class="d-flex align-items-center">
-                            <div>
-                                emoji
+                        <div class="bordered d-flex">
+                            <div class="top-side-emojis">
+                                <i class="fa-solid fa-circle-notch"></i>
                             </div>
 
-                            <div>
-                                emoji
+                            <div class="top-side-emojis">
+                                <i class="fa-solid fa-message"></i>
                             </div>
 
-                            <div>
-                                emoji
+                            <div class="top-side-emojis">
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
                     </div>
 
                     <!-- BADGE -->
-                    <div class="bordered d-flex align-items-center">
-                        <div class="px-3">
-                            emoji
+                    <div class="badge_container bordered d-flex align-items-center">
+                        <div class="badge_img bordered mx-4 py-1 px-2">
+                            <i class="fa-solid fa-bell-slash"></i>
                         </div>
 
-                        <div>
+                        <div class="badge_text">
                             <div>
                                 Ricevi notifiche di nuovi messaggi
                             </div>
 
-                            <div>
-                                Attiva notifiche desktop
-                            </div>
+                            <a href="">Attiva notifiche desktop</a>
                         </div>
-
                     </div>
 
                     <!-- SEARCH BAR -->
                     <div class="bordered input-group p-2">
-                        <span class="input-group-text">
-                            emoji
+                        <span class="input-group-text top-side-emojis px-3">
+                            <i class="fa-solid fa-magnifying-glass"></i>
                         </span>
                         <input v-model="sortContact" type="text" class="form-control" placeholder="Cerca o inizia nuova chat">
                     </div>
@@ -81,17 +83,17 @@
                     <div>
                         <div v-show="nameSorter (contact)" v-for="(contact, index) in contacts">                          
                             <!-- CONTACTS INDEX -->
-                            <div class="d-flex py-1 bordered" @click="chatCounter(index)">
+                            <div class="contact_chat d-flex py-1 px-3" @click="chatCounter(index)">
                                 <div class="align-self-center">
-                                    <img class="pfp" :src="contact.avatar" alt="">
+                                    <img class="img_layout" :src="contact.avatar" alt="">
                                 </div>
 
-                                <div>
+                                <div class="contact_text">
                                     <div>
                                         {{contact.name}}
                                     </div>
 
-                                    <div>
+                                    <div class="last_msg">
                                         Ultimo messaggio inviato
                                     </div>
                                 </div>
@@ -100,37 +102,37 @@
                     </div>
                 </div>
 
-                <!-- CHAT -->
-                <div  class="bordered col-8">
+                <!-- CHAT AREA-->
+                <div  class="bordered col-8 p-0">
                     <!-- TOP CHAT -->
-                    <div  class="pfp-area bordered py-2 px-3 d-flex justify-content-between align-items-center">
+                    <div  class="profile_container px-3 d-flex justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
                             <div>
-                                <img class="pfp" :src="contacts[activeChat].avatar" alt="">
+                                <img class="img_layout" :src="contacts[activeChat].avatar" alt="">
                             </div>
                             
-                            <div>
+                            <div class="contact_text">
                                 <div>
                                     {{contacts[activeChat].name}}
                                 </div> 
 
-                                <div>
-                                    text
+                                <div class="last_msg">
+                                    ultimo accesso
                                 </div>
                             </div>                                                 
                         </div>
 
                         <div class="d-flex align-items-center">
-                            <div>
-                                emoji
+                            <div class="top-side-emojis">
+                                <i class="fa-solid fa-magnifying-glass"></i>
                             </div>
 
-                            <div>
-                                emoji
+                            <div class="top-side-emojis">
+                                <i class="fa-solid fa-paperclip"></i>
                             </div>
 
-                            <div>
-                                emoji
+                            <div class="top-side-emojis">
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
                     </div>
@@ -138,7 +140,7 @@
                     <!-- MID CHAT -->
                     <div class="chat-area bordered">
                         <!-- MESSAGES -->
-                        <div class="my-5">
+                        <div>
                             <div v-for="message in contacts[activeChat].messages" class="d-flex flex-column">
                                 <!-- MESSAGE -->
                                 <div class="message mx-2 mt-2 col-4" :class="message.status">
@@ -151,17 +153,17 @@
 
 
                     <!-- BOT CHAT -->
-                    <div class="type-area bordered d-flex align-items-center">
-                        <div class="col-1"> 
-                            emoji
+                    <div class="type-area d-flex align-items-center">
+                        <div class="col-1 text-center bot-side-emojis"> 
+                            <i class="fa-regular fa-face-smile"></i>
                         </div>
 
                         <div class="input-group">
                             <input @keyup.enter="newInputCopy (), delayAnswer()" v-model.trim="newMessage.message" type="text" class="form-control" placeholder="Cerca o inizia nuova chat" >
                         </div>
 
-                        <div class="col-1">
-                            emoji
+                        <div class="col-1 text-center bot-side-emojis">
+                            <i class="fa-solid fa-microphone"></i>
                         </div>
                     </div>
                 </div>
@@ -171,7 +173,6 @@
     </div>
 
     <!-- BS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- JS -->
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
